--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
                                         <a href="#" class="lang">EN</a>
                                     </div>
                                 </div>
-                                <div class="burger-icon"></div>
                             </div>
                         </div>
+                        <div class="burger-icon"></div>
                     </div>      
                 </div>
             </div>
@@ -133,7 +133,7 @@
                 </div>
                 <div class="main-item">
                     <img src="assets/img/banner3.png" alt="banner-img">
-                    >
+                   
                 </div>
             </div>
         </section>
@@ -476,7 +476,7 @@
                                     standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to 
                                     make a type specimen book.
                                 </div>
-                                <a href="#" class="see-all-link">
+                                <a href="#" class="see-all-link see-2">
                                     See All
                                 </a>
                             </div>
