--- a/index.html
+++ b/index.html
@@ -76,15 +76,55 @@
                                 <ul>
                                     <li>
                                         <a href="#">PRODUCTS</a>
+                                        <div class="sub-menu">
+                                             <div class="sub-menu-links">
+                                                <a href="#">Our Partners</a>
+                                                <a href="#">Our Story</a>
+                                                <a href="#">Mission</a>
+                                                <a href="#">Vision</a>
+                                                <a href="#">Submenu #1</a>
+                                                <a href="#">Submenu #2</a>
+                                             </div>
+                                        </div>
                                     </li>
                                     <li>
                                         <a href="#">TEAM</a>
+                                        <div class="sub-menu">
+                                            <div class="sub-menu-links">
+                                               <a href="#">Our Partners</a>
+                                               <a href="#">Our Story</a>
+                                               <a href="#">Mission</a>
+                                               <a href="#">Vision</a>
+                                               <a href="#">Submenu #1</a>
+                                               <a href="#">Submenu #2</a>
+                                            </div>
+                                       </div>
                                     </li>
                                     <li>
                                         <a href="#">ABOUT US</a>
+                                        <div class="sub-menu">
+                                            <div class="sub-menu-links">
+                                               <a href="#">Our Partners</a>
+                                               <a href="#">Our Story</a>
+                                               <a href="#">Mission</a>
+                                               <a href="#">Vision</a>
+                                               <a href="#">Submenu #1</a>
+                                               <a href="#">Submenu #2</a>
+                                            </div>
+                                       </div>
                                     </li>
                                     <li>
                                         <a href="#">NEWS</a>
+                                        <div class="sub-menu">
+                                            <div class="sub-menu-links">
+                                               <a href="#">Our Partners</a>
+                                               <a href="#">Our Story</a>
+                                               <a href="#">Mission</a>
+                                               <a href="#">Vision</a>
+                                               <a href="#">Submenu #1</a>
+                                               <a href="#">Submenu #2</a>
+                                            </div>
+                                       </div>
                                     </li>
                                     <li>
                                         <a href="#">GALLERY</a>
@@ -428,7 +468,7 @@
                             <span class="line-1"></span>
                         </div>
                         <div class="row wrap-row row-height">
-                            <div class="col-lg-7 position-r">
+                            <div class="col-lg-6 position-r">
                                 <div class="popular-product-text">
                                     <h1>Standard dummy text ever since the 1500s, when an unknown printer took
                                         a galley of type and scrambled it to make a type specimen book
@@ -478,6 +518,41 @@
                                 </div>
                                 <a href="#" class="see-all-link see-2">
                                     See All
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <section>
+            <div class="footer-adv">
+                <div class="container">
+                    <div class="footer-cont"> 
+                        <div class="row add-items-end">
+                            <div class="col-lg-8 col-md-8 col-sm-8 col-8">
+                                <div class="adv-text">
+                                    <h2>Would you like to order?</h2>
+                                    <div class="text">
+                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-4 col-sm-4 col-4 add-end">
+                                <a href="#" class="adv-link">  
+                                    <span>CONTACT US</span>
+                                    <span> 
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="65.542" height="33.382" viewBox="0 0 65.542 33.382">
+                                            <g id="Iconly_Light_Arrow_-_Right" data-name="Iconly/Light/Arrow - Right" transform="translate(2 2.829)">
+                                            <g id="Arrow_-_Right" data-name="Arrow - Right" transform="translate(0 27.725) rotate(-90)">
+                                                <path id="Stroke_1" data-name="Stroke 1" d="M0,61.542V0" transform="translate(13.863)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="4"/>
+                                                <path id="Stroke_3" data-name="Stroke 3" d="M27.725,0,13.864,13.837,0,0" transform="translate(0 47.705)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="4"/>
+                                            </g>
+                                            </g>
+                                        </svg>
+                                    </span>
                                 </a>
                             </div>
                         </div>
