--- a/news-det.html
+++ b/news-det.html
@@ -178,7 +178,7 @@
             </div>
         </section>
         <section>
-            <div class="news-section pt-5 news-det-section">
+            <div class="news-section p-t-5 news-det-section">
                 <div class="container">
                     <div class="row row2">
                         <div class="col-lg-4 news-position">
