--- a/products.html
+++ b/products.html
@@ -190,7 +190,7 @@
                     <div class="col-xxl-3 col-lg-4 col-md-4 col-sm-6">
                          <div class="select-categories-box">
                             <h2>Product Categories</h2>
-                            <hr>
+                            <hr class="hr2">
                             <div class="categories-list">
                                 <ul class="list-ul">
                                     <li class="list-li">
@@ -330,7 +330,7 @@
                                         </ul>
                                     </li>
                                     <li class="list-li">
-                                        <a href="#">Forks - Knifes</a>
+                                        <a href="#">Table Cloth</a>
                                         <span>
                                             <svg xmlns="http://www.w3.org/2000/svg" width="9.414" height="16.828" viewBox="0 0 9.414 16.828">
                                             <g id="Arrow_-_Left_2" data-name="Arrow - Left 2" transform="translate(8 1.414) rotate(90)">
