--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <div class="bottom-navbar">
                                 <ul>
                                     <li>
-                                        <a href="#">PRODUCTS</a>
+                                        <a href="products.html">PRODUCTS</a>
                                         <div class="sub-menu">
                                              <div class="sub-menu-links">
                                                 <a href="#">Our Partners</a>
@@ -89,7 +89,7 @@
                                         </div>
                                     </li>
                                     <li>
-                                        <a href="#">TEAM</a>
+                                        <a href="team.html">TEAM</a>
                                         <div class="sub-menu">
                                             <div class="sub-menu-links">
                                                <a href="#">Our Partners</a>
@@ -128,10 +128,10 @@
                                        </div>
                                     </li>
                                     <li>
-                                        <a href="#">GALLERY</a>
+                                        <a href="photo-gallery.html">GALLERY</a>
                                     </li>
                                     <li>
-                                        <a href="#">CONTACT</a>
+                                        <a href="contact.html">CONTACT</a>
                                     </li>
                                 </ul>
                                 <div class="search-lang">
@@ -158,7 +158,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="burger-icon"></div>
+                        <div class="burger-icon">
+                            <div class="burger-lines">
+                                <div class="burger-line"></div>
+                                <div class="burger-line"></div>
+                                <div class="burger-line"></div>
+                            </div>
+                        </div>
                     </div>      
                 </div>
             </div>
@@ -425,12 +431,12 @@
                     </div>
                     <div class="about-position-box"> 
                         <div class="row wrap-row">
-                            <div class="col-lg-5">
+                            <div class="col-lg-5 col-md-6">
                                 <div class="about-image">
                                     <img src="assets/img/aboutImg.png" alt="img">
                                 </div>
                             </div>
-                            <div class="col-lg-8 absolute-position">
+                            <div class="col-lg-8 col-md-8 absolute-position">
                                 <div class="text-box-h">
                                     <h2>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
                                         the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley
@@ -462,31 +468,59 @@
         <section>
             <div class="popular-product-section padding-b">
                 <div class="popular-product"> 
-                    <div class="container">
-                        <div class="important-title">
-                            <span class="line-1"></span>
-                            <h1>POPULAR PRODUCT</h1>
-                            <span class="line-1"></span>
-                        </div>
-                        <div class="row wrap-row row-height">
-                            <div class="col-lg-6 position-r">
-                                <div class="popular-product-text">
-                                    <h1>Standard dummy text ever since the 1500s, when an unknown printer took
-                                        a galley of type and scrambled it to make a type specimen book
-                                    </h1>
-                                        <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem 
-                                            Ipsum has been the industry’s standard dummy text ever since the 1500s, when an 
-                                            unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    <div class="important-title">
+                        <span class="line-1"></span>
+                        <h1>POPULAR PRODUCT</h1>
+                        <span class="line-1"></span>
+                    </div>
+                    <div class="popular-slider-container">
+                        <div class="popular-slider-item">
+                            <div class="container">
+                                <div class="row wrap-row row-height">
+                                    <div class="col-lg-6 col-md-6 position-r">
+                                        <div class="popular-product-text">
+                                            <h1>Standard dummy text ever since the 1500s, when an unknown printer took
+                                                a galley of type and scrambled it to make a type specimen book
+                                            </h1>
+                                                <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem 
+                                                    Ipsum has been the industry’s standard dummy text ever since the 1500s, when an 
+                                                    unknown printer took a galley of type and scrambled it to make a type specimen book.
+                                                </div>
                                         </div>
+                                    </div>
+                                    <div class="col-lg-6 col-md-6 absolute-pos">
+                                        <div class="popular-product-img">
+                                            <img src="assets/img/popularImg.png" alt="img">
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="col-lg-6 absolute-pos">
-                                <div class="popular-product-img">
-                                    <img src="assets/img/popularImg.png" alt="img">
+                        </div>
+                        <div class="popular-slider-item">
+                            <div class="container">
+                                <div class="row wrap-row row-height">
+                                    <div class="col-lg-6 col-md-6 position-r">
+                                        <div class="popular-product-text">
+                                            <h1>Standard dummy text ever since the 1500s, when an unknown printer took
+                                                a galley of type and scrambled it to make a type specimen book
+                                            </h1>
+                                                <div class="text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem 
+                                                    Ipsum has been the industry’s standard dummy text ever since the 1500s, when an 
+                                                    unknown printer took a galley of type and scrambled it to make a type specimen book.
+                                                </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6 col-md-6 absolute-pos">
+                                        <div class="popular-product-img">
+                                            <img src="assets/img/popularImg.png" alt="img">
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                         
+                   
                 </div>
             </div>
         </section>
@@ -499,12 +533,12 @@
                         <span class="line-1"></span>
                     </div>
                     <div class="row">
-                        <div class="col-lg-4 news-position">
+                        <div class="col-lg-4 col-md-5 news-position">
                             <div class="news-img-box">
                                 <img src="assets/img/newsImg.png" alt="img">
                             </div>
                         </div>
-                        <div class="col-lg-8">
+                        <div class="col-lg-8 col-md-7">
                             <div class="news-text-box">
                                 <div class="time">
                                     <span>25</span>
@@ -517,7 +551,7 @@
                                     standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to 
                                     make a type specimen book.
                                 </div>
-                                <a href="#" class="see-all-link see-2">
+                                <a href="#" class="see-all-link see-2  see-all-link2">
                                     See All
                                 </a>
                             </div>
