--- a/products.html
+++ b/products.html
@@ -75,8 +75,8 @@
                             </div>
                             <div class="bottom-navbar">
                                 <ul>
-                                    <li>
-                                        <a href="#">PRODUCTS</a>
+                                    <li  class="colored">
+                                        <a href="products.html">PRODUCTS</a>
                                         <div class="sub-menu">
                                              <div class="sub-menu-links">
                                                 <a href="#">Our Partners</a>
@@ -89,7 +89,7 @@
                                         </div>
                                     </li>
                                     <li>
-                                        <a href="#">TEAM</a>
+                                        <a href="team.html">TEAM</a>
                                         <div class="sub-menu">
                                             <div class="sub-menu-links">
                                                <a href="#">Our Partners</a>
@@ -102,7 +102,7 @@
                                        </div>
                                     </li>
                                     <li>
-                                        <a href="#">ABOUT US</a>
+                                        <a href="about.html">ABOUT US</a>
                                         <div class="sub-menu">
                                             <div class="sub-menu-links">
                                                <a href="#">Our Partners</a>
@@ -115,7 +115,7 @@
                                        </div>
                                     </li>
                                     <li>
-                                        <a href="#">NEWS</a>
+                                        <a href="news.html">NEWS</a>
                                         <div class="sub-menu">
                                             <div class="sub-menu-links">
                                                <a href="#">Our Partners</a>
@@ -128,10 +128,10 @@
                                        </div>
                                     </li>
                                     <li>
-                                        <a href="#">GALLERY</a>
+                                        <a href="photo-gallery.html">GALLERY</a>
                                     </li>
                                     <li>
-                                        <a href="#">CONTACT</a>
+                                        <a href="contact.html">CONTACT</a>
                                     </li>
                                 </ul>
                                 <div class="search-lang">
@@ -187,7 +187,7 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-xxl-3 col-lg-4 col-md-4 col-sm-6">
+                    <div class="col-xxl-3 col-lg-4 col-md-4 col-sm-12">
                          <div class="select-categories-box">
                             <h2>Product Categories</h2>
                             <hr class="hr2">
@@ -513,7 +513,7 @@
                             </div>
                          </div>
                     </div>
-                    <div class="col-xxl-9 col-lg-9 col-md-8 col-sm-6">
+                    <div class="col-xxl-9 col-lg-8 col-md-8 col-sm-12">
                         <div class="products-container">
                             <div class="form-box">
                                 <div class="product-search-result">
@@ -523,7 +523,7 @@
                                     </h4>
                                 </div>
                                 <form>
-                                    <input type="text" placeholder="Product name, description ">
+                                    <input type="text" id="myInput" placeholder="Product name, description ">
                                     <button>
                                         <svg id="search-normal" xmlns="http://www.w3.org/2000/svg" width="20.493" height="20.493" viewBox="0 0 20.493 20.493">
                                             <path id="Vector" d="M16.224,8.112A8.112,8.112,0,1,1,8.112,0,8.112,8.112,0,0,1,16.224,8.112Z" transform="translate(1.708 1.708)" fill="none" stroke="#414141" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.7"/>
@@ -533,7 +533,7 @@
                                     </button>
                                 </form>
                             </div>
-                            <div class="products-list">
+                            <div class="products-list" id="search-list">
                                 <a href="#" class="product-list-item">
                                     <div class="list-img">
                                         <img src="assets/img/product-7.png" alt="img">
