--- a/news.html
+++ b/news.html
@@ -76,7 +76,7 @@
                             <div class="bottom-navbar">
                                 <ul>
                                     <li>
-                                        <a href="#">PRODUCTS</a>
+                                        <a href="products.html">PRODUCTS</a>
                                         <div class="sub-menu">
                                              <div class="sub-menu-links">
                                                 <a href="#">Our Partners</a>
@@ -89,7 +89,7 @@
                                         </div>
                                     </li>
                                     <li>
-                                        <a href="#">TEAM</a>
+                                        <a href="team.html">TEAM</a>
                                         <div class="sub-menu">
                                             <div class="sub-menu-links">
                                                <a href="#">Our Partners</a>
@@ -115,7 +115,7 @@
                                        </div>
                                     </li>
                                     <li class="colored">
-                                        <a href="#">NEWS</a>
+                                        <a href="news.html">NEWS</a>
                                         <div class="sub-menu">
                                             <div class="sub-menu-links">
                                                <a href="#">Our Partners</a>
@@ -128,10 +128,10 @@
                                        </div>
                                     </li>
                                     <li>
-                                        <a href="#">GALLERY</a>
+                                        <a href="photo-gallery.html">GALLERY</a>
                                     </li>
                                     <li>
-                                        <a href="#">CONTACT</a>
+                                        <a href="contact.html">CONTACT</a>
                                     </li>
                                 </ul>
                                 <div class="search-lang">
@@ -185,12 +185,12 @@
                 <div class="container">
                     <div class="row row2">
                         <div class="col-lg-4 news-position">
-                            <div class="news-img-box">
+                            <div class="news-img-box  ">
                                 <img src="assets/img/newsImg.png" alt="img">
                             </div>
                         </div>
                         <div class="col-lg-8">
-                            <div class="news-text-box">
+                            <div class="news-text-box news-text-box2">
                                 <div class="time">
                                     <span>25</span>
                                     <span>Mar 2022</span>
@@ -227,7 +227,7 @@
                             </div>
                         </div>
                         <div class="col-lg-8">
-                            <div class="news-text-box">
+                            <div class="news-text-box news-text-box2">
                                 <div class="time">
                                     <span>25</span>
                                     <span>Mar 2022</span>
@@ -264,7 +264,7 @@
                             </div>
                         </div>
                         <div class="col-lg-8">
-                            <div class="news-text-box">
+                            <div class="news-text-box news-text-box2">
                                 <div class="time">
                                     <span>25</span>
                                     <span>Mar 2022</span>
