--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -76,7 +76,7 @@
                             <div class="bottom-navbar">
                                 <ul>
                                     <li>
-                                        <a href="#">PRODUCTS</a>
+                                        <a href="products.html">PRODUCTS</a>
                                         <div class="sub-menu">
                                              <div class="sub-menu-links">
                                                 <a href="#">Our Partners</a>
@@ -114,8 +114,8 @@
                                             </div>
                                        </div>
                                     </li>
-                                    <li class="colored">
-                                        <a href="#">NEWS</a>
+                                    <li>
+                                        <a href="news.html">NEWS</a>
                                         <div class="sub-menu">
                                             <div class="sub-menu-links">
                                                <a href="#">Our Partners</a>
@@ -127,11 +127,11 @@
                                             </div>
                                        </div>
                                     </li>
-                                    <li>
-                                        <a href="#">GALLERY</a>
+                                    <li  class="colored">
+                                        <a href="photo-gallery.html">GALLERY</a>
                                     </li>
                                     <li>
-                                        <a href="#">CONTACT</a>
+                                        <a href="contact.html">CONTACT</a>
                                     </li>
                                 </ul>
                                 <div class="search-lang">
