--- a/product-detail.html
+++ b/product-detail.html
@@ -75,8 +75,8 @@
                             </div>
                             <div class="bottom-navbar">
                                 <ul>
-                                    <li>
-                                        <a href="#">PRODUCTS</a>
+                                    <li  class="colored">
+                                        <a href="products.html">PRODUCTS</a>
                                         <div class="sub-menu">
                                              <div class="sub-menu-links">
                                                 <a href="#">Our Partners</a>
@@ -89,7 +89,7 @@
                                         </div>
                                     </li>
                                     <li>
-                                        <a href="#">TEAM</a>
+                                        <a href="team.html">TEAM</a>
                                         <div class="sub-menu">
                                             <div class="sub-menu-links">
                                                <a href="#">Our Partners</a>
@@ -102,7 +102,7 @@
                                        </div>
                                     </li>
                                     <li>
-                                        <a href="#">ABOUT US</a>
+                                        <a href="about.html">ABOUT US</a>
                                         <div class="sub-menu">
                                             <div class="sub-menu-links">
                                                <a href="#">Our Partners</a>
@@ -115,7 +115,7 @@
                                        </div>
                                     </li>
                                     <li>
-                                        <a href="#">NEWS</a>
+                                        <a href="news.html">NEWS</a>
                                         <div class="sub-menu">
                                             <div class="sub-menu-links">
                                                <a href="#">Our Partners</a>
@@ -128,10 +128,10 @@
                                        </div>
                                     </li>
                                     <li>
-                                        <a href="#">GALLERY</a>
+                                        <a href="photo-gallery.html">GALLERY</a>
                                     </li>
                                     <li>
-                                        <a href="#">CONTACT</a>
+                                        <a href="contact.html">CONTACT</a>
                                     </li>
                                 </ul>
                                 <div class="search-lang">
