--- a/team.html
+++ b/team.html
@@ -76,7 +76,7 @@
                             <div class="bottom-navbar">
                                 <ul>
                                     <li>
-                                        <a href="#">PRODUCTS</a>
+                                        <a href="products.html">PRODUCTS</a>
                                         <div class="sub-menu">
                                              <div class="sub-menu-links">
                                                 <a href="#">Our Partners</a>
@@ -88,7 +88,7 @@
                                              </div>
                                         </div>
                                     </li>
-                                    <li>
+                                    <li  class="colored">
                                         <a href="team.html">TEAM</a>
                                         <div class="sub-menu">
                                             <div class="sub-menu-links">
@@ -114,8 +114,8 @@
                                             </div>
                                        </div>
                                     </li>
-                                    <li class="colored">
-                                        <a href="#">NEWS</a>
+                                    <li>
+                                        <a href="news.html">NEWS</a>
                                         <div class="sub-menu">
                                             <div class="sub-menu-links">
                                                <a href="#">Our Partners</a>
@@ -128,10 +128,10 @@
                                        </div>
                                     </li>
                                     <li>
-                                        <a href="#">GALLERY</a>
+                                        <a href="photo-gallery.html">GALLERY</a>
                                     </li>
                                     <li>
-                                        <a href="#">CONTACT</a>
+                                        <a href="contact.html">CONTACT</a>
                                     </li>
                                 </ul>
                                 <div class="search-lang">
@@ -211,6 +211,9 @@
                                  </a>
                              </div>
                          </div>
+                     </div>
+                     <div class="personal-hidden-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, voluptas.
                      </div>
                  </div>
                  <img src="assets/img/Mask Group 158.svg" alt="img" class="position-img">
