--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
             </div>
         </section>
         <section>
-            <div class="news-section news-section2 padding">
+            <div class="news-section news-section2 padding nn-section">
                 <div class="important-title">
                     <span class="line-1"></span>
                     <h1>News</h1>
